Fix main layout overflow scrolling

--- a/ekilex-app/src/main/resources/scss/common-styles.scss
+++ b/ekilex-app/src/main/resources/scss/common-styles.scss
@@ -145,7 +145,7 @@ input:checked+.slider:before {
 
 .body-with-navbar {
 	height: 100vh;
-	padding-top: 4rem;
+	padding-top: 3rem;
 }
 
 
